--- a/api/package.json
+++ b/api/package.json
@@ -17,13 +17,15 @@
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "razorpay": "^2.9.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
